--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "oskarkuklinski.github.io",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://oskarkuklinski.github.io",
